tests/compile_fail/state/not_on_state_impl.rs
mod blinky {
    use moku::*;

    struct Top {}

    struct Bottom {}

    #[superstate(Top)]
    impl Default for Bottom {
        fn default() -> Self {
            Self {}
        }
    }
}

fn main() {}
